# voice-assistant

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  voice_assistant_gui  voiceassistant.cpp  voiceassistant.h
commands/: browser.sh  hello.sh
